auth/auth-k8/auth_ui_dep.yml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: authui-deploy
  namespace: shoppingportal
spec:
  replicas: 1
  selector:
    matchLabels:
      zone: prod
      app: authui
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        version: "1.0.0"
        release: stable
        tier: fe
        zone: prod
        managed-by: m2
        app: authui
    spec:
      containers:
        - name: authui-ctr
          image: metamagicglobal/authui:k8 
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 80                                  
          livenessProbe:
            httpGet:
              path: /authui/appinfo.json
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 15
