auth/auth-k8/auth-ms-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-svc
  namespace: shoppingportal
spec:
  selector: 
    app: authms
  ports:
  - protocol: TCP
    targetPort: 8082
    port: 80
    name: http
