auth/auth-k8/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-svc
  namespace: shoppingportal
spec:
  type: LoadBalancer
  selector: 
    name: authms
    app: authms
  ports:
  - protocol: TCP
    targetPort: 8082
    port: 80
    name: http
