auth/auth-k8/auth-ui-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: authui-svc
  namespace: shoppingportal
  labels:
    app: authui     
spec:
  selector:
        app: authui          
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: my-http-port
