auth/auth-k8/mongo-ex-svc.yml
kind: Service
apiVersion: v1
metadata:
  name: mongo-ex-svc
  namespace: desire3d-ext
spec:
  ports:
    -
      name: mongo-ex-svc
      protocol: TCP
      port: 27017
      targetPort: 27017
