auth/auth-k8/auth-destination.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: auth-destination-rules
  namespace: shoppingportal    
spec:
  host: authservice.shoppingportal.svc.cluster.local
  subsets:
  - name: stable
    labels:
      version: v1
